Fix picture too big

--- a/index.css
+++ b/index.css
@@ -170,7 +170,7 @@ body {
   padding: 6rem 0;
   background: #faf8ed;
   border-radius: 50%;
-  max-width: 100vw;
+  max-width: 70vw;
 }
 
 .community-img {
@@ -254,6 +254,10 @@ body {
 }
 
 @media screen and (max-width: 1024px) {
+  .community {
+    max-width: 100vw;
+  }
+
   .features {
     flex-direction: column;
   }
